fix when overflow hidden, position sticky still works

--- a/src/blocks/section/styles/style.scss
+++ b/src/blocks/section/styles/style.scss
@@ -232,6 +232,10 @@ section.guten-section {
     overflow: hidden;
   }
 
+  &.overflow-clip {
+    overflow: clip;
+  }
+
   @media (min-width: 781px) {
     &.guten-section-height-full {
       height: 100vh;
